[dev-dependencies]
criterion = '0.3.0'
wabt = '0.9.2'

[dev-dependencies.frame-support]
path = '../../../frame/support'
version = '2.0.0'

[dev-dependencies.frame-system]
path = '../../../frame/system'
version = '2.0.0'

[dev-dependencies.node-testing]
path = '../testing'
version = '2.0.0'

[dev-dependencies.pallet-balances]
path = '../../../frame/balances'
version = '2.0.0'

[dev-dependencies.pallet-contracts]
path = '../../../frame/contracts'
version = '2.0.0'

[dev-dependencies.pallet-grandpa]
path = '../../../frame/grandpa'
version = '2.0.0'

[dev-dependencies.pallet-im-online]
path = '../../../frame/im-online'
version = '2.0.0'

[dev-dependencies.pallet-indices]
path = '../../../frame/indices'
version = '2.0.0'

[dev-dependencies.pallet-session]
path = '../../../frame/session'
version = '2.0.0'

[dev-dependencies.pallet-timestamp]
path = '../../../frame/timestamp'
version = '2.0.0'

[dev-dependencies.pallet-transaction-payment]
path = '../../../frame/transaction-payment'
version = '2.0.0'

[dev-dependencies.pallet-treasury]
path = '../../../frame/treasury'
version = '2.0.0'

[dev-dependencies.sp-application-crypto]
path = '../../../primitives/application-crypto'
version = '2.0.0'

[dev-dependencies.sp-runtime]
path = '../../../primitives/runtime'
version = '2.0.0'

[dev-dependencies.substrate-test-client]
path = '../../../test-utils/client'
version = '2.0.0'

[features]
stress-test = []
wasmi-errno = ['sc-executor/wasmi-errno']
wasmtime = ['sc-executor/wasmtime']

[[bench]]
harness = false
name = 'bench'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate node implementation in Rust.'
edition = '2018'
license = 'GPL-3.0'
name = 'node-executor'
version = '2.0.0'

[dependencies]
trie-root = '0.15.2'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-state-machine]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'
