[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
license = 'GPL-3.0'
name = 'node-primitives'
version = '2.0.0'

[features]
default = ['std']
std = [
    'sp-core/std',
    'sp-runtime/std',
]

[dev-dependencies]
pretty_assertions = '0.6.1'

[dev-dependencies.sp-serializer]
path = '../../../primitives/serializer'
version = '2.0.0'
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'
