[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
license = 'GPL-3.0'
name = 'node-rpc-client'
version = '2.0.0'

[dependencies]
env_logger = '0.7.0'
futures = '0.1.29'
hyper = '0.12.35'
log = '0.4.8'

[dependencies.jsonrpc-core-client]
features = [
    'http',
    'ws',
]
version = '14.0.3'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'
