[dependencies]
wabt = '0.9.2'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.node-executor]
path = '../executor'
version = '2.0.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-session]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-society]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.pallet-treasury]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.substrate-test-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Test utilities for Substrate node.'
edition = '2018'
license = 'GPL-3.0'
name = 'node-testing'
version = '2.0.0'
