[dependencies]
log = '0.4.8'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'de2ffd937db78093efaa58d7cc08f5599a8f4728'
version = '2.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
license = 'GPL-3.0'
name = 'node-transaction-factory'
version = '0.8.0'
