[package]
name = "assets"
version = "0.1.0"
authors = ["Definex Team"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "support/std",
    "system/std",
    "sp-runtime/std",
    "runtime-io/std",
    "rstd/std",
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.support]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.system]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.sp-runtime]
default_features = false
git = "https://github.com/paritytech/substrate.git"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.runtime-io]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.generic-asset]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.sudo]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dependencies.rstd]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-std"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dev-dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dev-dependencies.generic-asset]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dev-dependencies.sudo]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"

[dev-dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "de2ffd937db78093efaa58d7cc08f5599a8f4728"
